# Python-Piscine

./: .gitignore  Readme.md
00/ex02/: find_ft_type.py
00/ex03/: NULL_not_found.py
00/ex04/: whatis.py
00/ex05/: building.py
00/ex06/: filterstring.py  ft_filter.py
00/ex07/: sos.py
00/ex08/: Loading.py
00/ex09/: README.md  pyproject.toml
01/00/: give_bmi.py
01/01/: array2D.py
01/02/: load_image.py
01/03/: zoom.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
